<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="#fff"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"

        android:text="@string/login"
        android:textColor="#E6000000"
        android:textSize="40dp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/username"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHint="#99000000"
        android:backgroundTint="@color/black"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/pass"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="#99000000"
        android:backgroundTint="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:inputType="textPassword" />


 <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:backgroundTint="#00BFFF"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="24sp"
        android:gravity="center_horizontal" />

</LinearLayout>